# wayle-services

./: .clippy.toml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  publish-remaining.sh  release-plz.toml
.github/: labeler.yml  pull_request_template.md
crates/wayle-cava/: Cargo.toml  build.rs
crates/wayle-cava/src/: builder.rs  error.rs  lib.rs  monitoring.rs  service.rs  types.rs
crates/wayle-cava/src/ffi/: bindings.rs  mod.rs  types.rs
crates/wayle-cava/src/ffi/wrappers/: audio_input.rs  audio_output.rs  config.rs  mod.rs  plan.rs
crates/wayle-core/: Cargo.toml
crates/wayle-core/src/: lib.rs  macros.rs
crates/wayle-core/src/property/: mod.rs  serde.rs  stream.rs
crates/wayle-hyprland/: Cargo.toml
crates/wayle-hyprland/src/: discovery.rs  error.rs  lib.rs  monitoring.rs  service.rs
crates/wayle-hyprland/src/commands/: command.rs  mod.rs  query.rs  types.rs
crates/wayle-hyprland/src/core/: mod.rs
crates/wayle-hyprland/src/core/client/: mod.rs  monitoring.rs
crates/wayle-hyprland/src/core/layer/: mod.rs
crates/wayle-hyprland/src/core/monitor/: mod.rs  monitoring.rs
crates/wayle-hyprland/src/core/window/: mod.rs
crates/wayle-hyprland/src/core/workspace/: mod.rs  monitoring.rs
crates/wayle-hyprland/src/events/: dispatcher.rs  layer.rs  mod.rs  monitor.rs  types.rs  window.rs  workspace.rs
crates/wayle-hyprland/src/events/layer/: mod.rs  types.rs
crates/wayle-hyprland/src/events/monitor/: mod.rs  types.rs
crates/wayle-hyprland/src/events/window/: mod.rs  types.rs
crates/wayle-hyprland/src/events/workspace/: mod.rs  types.rs
crates/wayle-hyprland/src/ipc/: command.rs  mod.rs  query.rs
crates/wayle-hyprland/src/ipc/events/: dispatcher.rs  layer.rs  mod.rs  monitor.rs  types.rs  window.rs  workspace.rs
crates/wayle-hyprland/src/monitoring/: layer.rs  mod.rs  monitor.rs  plan.rs  projector.rs  reconcile.rs  window.rs  workspace.rs
crates/wayle-hyprland/src/types/: bind.rs  client.rs  device.rs  layer.rs  mod.rs  monitor.rs  window.rs  workspace.rs
crates/wayle-media/: Cargo.toml
crates/wayle-media/src/: builder.rs  error.rs  glob.rs  lib.rs  monitoring.rs  proxy.rs  selection.rs  service.rs  types.rs
crates/wayle-media/src/core/metadata/: mod.rs  monitoring.rs  types.rs
crates/wayle-media/src/core/player/: mod.rs  monitoring.rs  types.rs
crates/wayle-media/src/dbus/: client.rs  server.rs
crates/wayle-media/src/tests/: mod.rs
crates/wayle-notification/: Cargo.toml
crates/wayle-notification/src/: builder.rs  daemon.rs  error.rs  events.rs  lib.rs  monitoring.rs  persistence.rs  popup_timer.rs  service.rs  wayle_daemon.rs
crates/wayle-notification/src/core/: controls.rs  mod.rs  notification.rs  types.rs
crates/wayle-notification/src/proxy/: notifications.rs
crates/wayle-notification/src/types/: mod.rs  notification.rs
crates/wayle-sysinfo/: Cargo.toml
crates/wayle-sysinfo/src/: builder.rs  service.rs
crates/wayle-sysinfo/src/polling/: cpu.rs  disk.rs  memory.rs  mod.rs  network.rs
crates/wayle-systray/: Cargo.toml
crates/wayle-systray/src/: builder.rs  discovery.rs  error.rs  events.rs  lib.rs  monitoring.rs  service.rs
crates/wayle-systray/src/adapters/: mod.rs
crates/wayle-systray/src/adapters/gtk4/: mod.rs
crates/wayle-systray/src/core/item/: controls.rs  mod.rs  monitoring.rs  types.rs
crates/wayle-systray/src/dbus/: client.rs  server.rs
crates/wayle-systray/src/proxy/: dbusmenu.rs  mod.rs  status_notifier_item.rs  status_notifier_watcher.rs
crates/wayle-systray/src/types/: item.rs  menu.rs  mod.rs
crates/wayle-systray/src/watcher/: mod.rs  monitoring.rs
crates/wayle-wallpaper/: Cargo.toml
crates/wayle-wallpaper/src/: builder.rs  error.rs  lib.rs  service.rs
crates/wayle-wallpaper/src/backend/: mod.rs
crates/wayle-wallpaper/src/backend/awww/: daemon.rs
crates/wayle-wallpaper/src/backend/swww/: mod.rs  transition.rs
crates/wayle-wallpaper/src/dbus/: client.rs  mod.rs  server.rs
crates/wayle-wallpaper/src/tasks/: cycle_runner.rs  mod.rs  timer.rs  watcher.rs
crates/wayle-wallpaper/src/types/: color_extractor.rs  cycling.rs  fit_mode.rs  monitor_state.rs
crates/wayle-wallpaper/src/wayland/: listener.rs  mod.rs
crates/wayle-weather/: Cargo.toml
crates/wayle-weather/src/: builder.rs  error.rs  geocoding.rs  lib.rs  model.rs  polling.rs  service.rs
crates/wayle-weather/src/provider/: mod.rs
crates/wayle-weather/src/provider/open_meteo/: mod.rs  parse.rs  types.rs
crates/wayle-weather/src/provider/visual_crossing/: mod.rs  parse.rs
crates/wayle-weather/src/provider/weatherapi/: mod.rs  parse.rs
wayle-audio/: CHANGELOG.md  Cargo.toml  README.md
wayle-audio/src/: lib.rs
wayle-battery/: CHANGELOG.md  Cargo.toml  README.md
wayle-bluetooth/: CHANGELOG.md  Cargo.toml  README.md
wayle-bluetooth/src/: lib.rs
wayle-brightness/: CHANGELOG.md  Cargo.toml  README.md
wayle-brightness/src/: lib.rs
wayle-brightness/src/backend/: sysfs.rs
wayle-brightness/src/types/: backlight.rs
wayle-cava/: CHANGELOG.md  Cargo.toml  README.md
wayle-core/: CHANGELOG.md  Cargo.toml  README.md
wayle-hyprland/: CHANGELOG.md  Cargo.toml  README.md
wayle-hyprland/src/: lib.rs
wayle-media/: CHANGELOG.md  Cargo.toml  README.md
wayle-media/src/: lib.rs
wayle-network/: CHANGELOG.md  Cargo.toml  README.md
wayle-notification/: CHANGELOG.md  Cargo.toml  README.md
wayle-notification/src/: lib.rs
wayle-notification/src/core/: notification.rs
wayle-power-profiles/: CHANGELOG.md  Cargo.toml  README.md
wayle-sysinfo/: CHANGELOG.md  Cargo.toml  README.md
wayle-sysinfo/src/: builder.rs  lib.rs  service.rs
wayle-sysinfo/src/polling/: gpu.rs  mod.rs
wayle-sysinfo/src/types/: gpu.rs  mod.rs
wayle-systray/: CHANGELOG.md  Cargo.toml  README.md
wayle-traits/: CHANGELOG.md  Cargo.toml  README.md
wayle-traits/src/: lib.rs
wayle-wallpaper/: CHANGELOG.md  Cargo.toml  README.md
wayle-wallpaper/src/: builder.rs  lib.rs
wayle-wallpaper/src/dbus/: client.rs  mod.rs  server.rs
wayle-weather/: CHANGELOG.md  Cargo.toml  README.md
wayle-weather/src/: lib.rs
(+222 files in other folders)
