[workspace]
resolver = "2"
members = [
    "wayle-audio",
    "wayle-battery",
    "wayle-bluetooth",
    "wayle-brightness",
    "wayle-cava",
    "wayle-core",
    "wayle-hyprland",
    "wayle-media",
    "wayle-network",
    "wayle-notification",
    "wayle-power-profiles",
    "wayle-sysinfo",
    "wayle-systray",
    "wayle-traits",
    "wayle-wallpaper",
    "wayle-weather",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.92"
repository = "https://github.com/wayle-rs/wayle-services"
license = "MIT"

[workspace.dependencies]
async-stream = "0.3.6"
async-trait = "0.1.89"
bitflags = "2.9.4"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
derive_more = { version = "2.0.1", default-features = false, features = ["debug"] }
fnv = "1.0"
futures = "0.3.31"
gdk-pixbuf = "0.21.2"
glib = "0.21.3"
gtk4 = { version = "0.10.1", features = ["v4_12"] }
libc = "0.2.176"
libpulse-binding = "2.30.1"
notify = "8"
png = "0.18"
rand = "0.9.2"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json", "query", "charset"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smithay-client-toolkit = "0.20"
sysinfo = { version = "0.33", default-features = false, features = ["system", "component", "disk", "network", "user"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-util = "0.7.16"
toml = "0.9.7"
tracing = "0.1.41"
wayle-core = { version = "0.1.1", path = "wayle-core" }
wayle-cava = { version = "0.1.1", path = "wayle-cava", features = ["vendored"] }
wayle-traits = { version = "0.1.1", path = "wayle-traits" }
wildcard = "0.3"
zbus = { version = "5.11.0", default-features = false, features = ["tokio"] }

[workspace.lints.clippy]
cognitive_complexity = "warn"
expect_used = "deny"
inefficient_to_string = "warn"
large_types_passed_by_value = "warn"
manual_ok_or = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
module_name_repetitions = "allow"
panic = "warn"
similar_names = "allow"
too_many_lines = "warn"
unwrap_used = "deny"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "deny"

[profile.release]
lto = true
codegen-units = 1
