[package]
name = "wayle-traits"
description = "Shared traits for Wayle service monitoring and lifecycle"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]

[lints]
workspace = true
