[package]
name = "wayle-wallpaper"
description = "Wallpaper management with cycling and color extraction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true
readme = "README.md"

[dependencies]
derive_more.workspace = true
futures.workspace = true
notify.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "process"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
zbus.workspace = true
smithay-client-toolkit.workspace = true

wayle-core.workspace = true
wayle-traits.workspace = true

[lints]
workspace = true
