[package]
name = "wayle-cava"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
derive_more.workspace = true
libc = "0.2"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-common.workspace = true
wayle-traits.workspace = true

[dev-dependencies]
futures.workspace = true

[build-dependencies]
pkg-config = "0.3"

[lints]
workspace = true
