[package]
name = "wayle-cava"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = []
vendored = ["dep:cc"]

[dependencies]
derive_more.workspace = true
libc = "0.2"
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-common.workspace = true
wayle-traits.workspace = true

[dev-dependencies]
futures.workspace = true

[build-dependencies]
bindgen = "0.72"
cc = { version = "1.2", features = ["parallel"], optional = true }
pkg-config = "0.3"

[lints]
workspace = true
