[package]
name = "wayle-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core reactive primitives and D-Bus utilities for Wayle services"
repository.workspace = true
license.workspace = true

[dependencies]
futures.workspace = true
schemars = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
zbus.workspace = true

[dev-dependencies]
toml.workspace = true

[features]
default = []
schema = ["schemars"]

[lints]
workspace = true
