[package]
name = "wayle-media"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
derive_more.workspace = true
fnv.workspace = true
futures.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
tracing.workspace = true
wayle-core.workspace = true
wildcard.workspace = true
wayle-traits.workspace = true
zbus.workspace = true

[lints]
workspace = true
