[package]
name = "wayle-notification"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
png.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-core.workspace = true
wildcard.workspace = true
wayle-traits.workspace = true
zbus.workspace = true

[lints]
workspace = true
