[package]
name = "wayle-sysinfo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
derive_more.workspace = true
futures.workspace = true
sysinfo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-core.workspace = true

[lints]
workspace = true
