[package]
name = "wayle-systray"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "System tray service for Wayland"
repository.workspace = true
license.workspace = true
keywords = ["dbus", "statusnotifier", "systray", "wayland"]
categories = ["api-bindings", "gui"]

[dependencies]
async-stream.workspace = true
async-trait.workspace = true
chrono.workspace = true
derive_more.workspace = true
futures.workspace = true
gdk-pixbuf = { workspace = true, optional = true }
glib = { workspace = true, optional = true }
# Optional GTK adapter dependencies
gtk4 = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
wayle-core.workspace = true
wayle-traits.workspace = true
zbus.workspace = true

[dev-dependencies]
glib.workspace = true
gtk4.workspace = true
tempfile = "3"
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = []
adapter-gtk = ["dep:gdk-pixbuf", "dep:glib", "dep:gtk4"]

[lints]
workspace = true
