[package]
name = "wayle-wallpaper"
description = "Wallpaper service for Wayle desktop shell"
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
derive_more.workspace = true
futures.workspace = true
notify.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full", "process"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tracing.workspace = true
zbus.workspace = true
smithay-client-toolkit.workspace = true

wayle-core.workspace = true
wayle-config.workspace = true
wayle-traits.workspace = true

[lints]
workspace = true
